--- a/architects.css
+++ b/architects.css
@@ -11,6 +11,13 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color: rgba(255, 144, 14, 1);
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700px;
+}
 /*dark 02*/
 .text-gray{
     color:#424242 ;
@@ -67,6 +74,7 @@ main > section{
     font-weight: 600;
     font-size: 1.15rem;
 }
+
 .banner-content{
     max-width: 850px;
     margin: 0 auto;
@@ -83,17 +91,37 @@ main > section{
 /*tram and feature related style*/
 .teams{
     align-items: center;
+    
 
 }
 .team-img-container{
+    display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 24px;
 }
+.our-features{
+    margin-left: 20px;
+    /*max-width: 530px;*/
+}
+
 
 /*reponsive media query*/
-@media  screen and (max-width: 576px;){
-    .navbar,.nav-links{
+@media  screen and (max-width: 576px){
+    .navbar,.nav-links,.teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    /*medium size device*/
+    @media screen and (min-width) and (max-width:992)
+    {
+        .teams{
+            flex-direction: column;
+        }
+        .our-features{
+            margin: 50px auto;
+        }
     }
 }
     
