--- a/architects.css
+++ b/architects.css
@@ -48,7 +48,7 @@ main > section{
 }
 .brand{
     font-weight: 700;
-    font-size: ;
+    
 }
 .nav-item{
     list-style: none;
@@ -103,9 +103,41 @@ main > section{
     margin-left: 20px;
     /*max-width: 530px;*/
 }
+#quick-list{
+    font-weight: 500px;
+}
+/*some facts related styles*/
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 
+}
+.fact-card{
+    border:1px solid #FF900E ;
+    width: 242px;
+    height: 242px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 546px;
+    
+}
 
-/*reponsive media query*/
+/*responsive media query*/
 @media  screen and (max-width: 576px){
     .navbar,.nav-links,.teams{
         flex-direction: column;
