added sponsor section and made it responsive

--- a/architects.css
+++ b/architects.css
@@ -136,24 +136,71 @@ main > section{
     max-width: 546px;
     
 }
+.sponsor-companies-img img {
+  filter: grayscale(100%);
+}
+/* sponsor-info*/
+        .sponsor-info{
+            max-width: 540px;
+            margin: 50px auto;
+            text-align: center;
+        }
+        .sponsor-companies{
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            
+        }
+        
+        .facts-container,.sponsor-companies{
+            justify-items: center;
+            gap: 25px;
+        }
+        .sponsor-companies-img img{
+            justify-content:center;
+            gap: 25px;
+        }
 
 /*responsive media query*/
 @media  screen and (max-width: 576px){
     .navbar,.nav-links,.teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
     }
     /*medium size device*/
-    @media screen and (min-width) and (max-width:992)
+    @media screen and (min-width: 576px) and (max-width: 992px)
     {
         .teams{
             flex-direction: column;
         }
+        /*.facts-container{
+            justify-items: center;
+            gap: 25px;
+        }*/
         .our-features{
             margin: 50px auto;
         }
+        .sponsor-companies-img,.facts-container{
+            grid-template-columns: repeat(2, 1fr);
+            gap: 50px;
+            justify-items: center;
+        }
+        /* sponsor-info*/
+        /*.sponsor-info{
+            max-width: 540px;
+            margin: 50px auto;
+            text-align: center;
+        }
+        .sponsor-companies{
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+        }
+        .sponsor-companies img{
+            filter: grayscale (100%);
+        }*/
     }
 }
     
