--- a/architects.css
+++ b/architects.css
@@ -64,8 +64,6 @@ main > section{
 }
 .btn-primary{
     background-color:rgba(255, 144, 14, 1) ;
-    width: 180px;
-    height: 64px;
     border-radius: 8px;
     border: none;
     justify-items: center;
@@ -127,6 +125,21 @@ main > section{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -77px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img
+{
+   width: 100%;
+}
 
 /*some facts related styles*/
 .facts-container{
@@ -158,9 +171,19 @@ main > section{
     max-width: 546px;
     
 }
+.copyright{
+    color: rgba(66, 66, 66, 1);
+    font-size: 1.2rem;
+    text-align: center;
+    background-color: rgba(255, 244, 231, 1);
+    padding: 20px 0;
+    margin-top: 50px;
+
+}
 .sponsor-companies-img img {
   filter: grayscale(100%);
 }
+#
 /* sponsor-info*/
         .sponsor-info{
             max-width: 540px;
@@ -184,7 +207,11 @@ main > section{
 
 /*responsive media query*/
 @media  screen and (max-width: 576px){
-    .navbar,.nav-links,.teams{
+    .navbar,
+    .nav-links,
+    .teams,
+    .features
+    {
         flex-direction: column;
     }
     .team-img-container,
@@ -195,7 +222,7 @@ main > section{
     /*medium size device*/
     @media screen and (min-width: 576px) and (max-width: 992px)
     {
-        .teams{
+        .teams,.features{
             flex-direction: column;
         }
         /*.facts-container{
@@ -205,7 +232,12 @@ main > section{
         .our-features{
             margin: 50px auto;
         }
-        .sponsor-companies-img,.facts-container{
+        #experience-badge{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        .sponsor-companies-img,
+        .facts-container{
             grid-template-columns: repeat(2, 1fr);
             gap: 50px;
             justify-items: center;
